src/BloomBrowserUI/bookEdit/css/editMode.less
/*This stylesheet applied when a book is being edited. It does things like show that images can be changed by click on them.*/
@import "../../bloomUI.less";
@import "../sourceBubbles/sourceBubbles.less";
@import "../../placeHolderImages.less";

@bleed: 3mm; // Duplicated from basePage.less to remove circular dependency between BloomBrowserUI and content

@focusBorderColor: transparent; // #d6eaed; // @bloom-blue; // rgba(82, 168, 236, 0.6);
@tipLinkColor: #8e3581; // intentionally a bit darker to be legible

// should apply to everything, even dialogs.
body {
    --page-structure-color: #1d94a41a;
    --language-tag-color: #1d94a488;
    --selectedEdit-color: #1d94a4c2; //page structure color, but 76% opacity instead of 10%
    --unselectedEdit-color: #1d94a434; // page structure color, but 20% opacity instead of 10%
}

.bloom-page.cover {
    --page-structure-color: rgba(128, 128, 128, 0.268);
    --language-tag-color: rgba(128, 128, 128, 0.9);
    --selectedEdit-color: rgba(128, 128, 128, 0.9);
}
// This mixin simply encapsulates the logic of how we add a border on top
// of the edge of a bloom-canvas instead of adding a regular border
// which modifies the size of the container. See BL-10268.
.borderOnTopOfElement(@color) {
    &:after {
        border: 1px solid @color;
        content: "";
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        position: absolute;
        // this ":after" is actually on top of the whole image, including its description
        // if that is turned on. But we're only interested in putting a border around
        // the image; we don't want to intercept clicks on the image (or its description).
        pointer-events: none;
    }
}

@EditBoxItemsColor: #0000001a;
@MediumGray: #c0b9b9;
// For now we don't want this effect at all (BL-13895). Decided to keep the variable in case we change our minds.
@ImageAndVideoHoverOverlay: transparent;
@ImageButtonBorder: #716666;
@ChangeImageButtonColor: @ControlColor;
/*#0C8597; */
@OverflowColor: @WarningColor;
@MainPageBackgroundColor: #f8f8f8;
@PageDragBackgroundColor: #ffffa3;
@PageDragBorderColor: #c1e6ca;
@PageDragInnerItemBorderColor: #787800;

@PageLabelAndChangeLayoutPaneHeight: 45px;
@PageLabelVerticalDisplacement: -33px;

@imageDescriptionTopBorderWidth: 20px;

body {
    background-color: @bloom-darkestBackground;
    /* This works with a transform:scale style added in Javascript to allow zooming just the main page*/
    transform-origin: top left;
    // This was marked as working around a bug in Geckofx and that it should be removed when we weren't on
    // Geckofx anymore. However, its purpose is to keep the browser from having redraw errors during
    // Ctrl + mousewheel zooming and I saw some errors doing that, so I left it here.
    transition: transform 20ms;
}

// See comments on .bloom-mediaBox in basePage.less for a description of the mediaBox.
// Here, we are causing it to be visible when desired.
.bloom-mediaBox {
    pointer-events: none; // we want all clicks to go through this to the child

    & > * {
        pointer-events: auto; // start up clicks again a the next level
    }

    :not(.Device16x9Portrait):not(.Device16x9Landscape):not(
            .Ebook2x3Portrait
        ):not(.Ebook7x5Landscape)&::before {
        // show bleed area
        content: "";
        position: absolute;
        left: 0;
        right: 0;

        top: 0;
        bottom: 0;
        border: 3mm solid rgba(0, 0, 0, 0.8);
        z-index: 1;
    }

    :not(.Device16x9Portrait):not(.Device16x9Landscape):not(
            .Ebook2x3Portrait
        ):not(.Ebook7x5Landscape)&:after {
        // show safety area (the area inside of the trim box that still could get cut)
        content: "";
        position: absolute;
        left: @bleed;
        right: @bleed;
        top: @bleed;
        bottom: @bleed;
        border: 3mm solid rgba(0, 0, 0, 0.05);
        z-index: 2;
    }
}

#labelAndLayoutPane {
    height: @PageLabelAndChangeLayoutPaneHeight;
}

.tool-items:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
    font-size: 0;
}

.tool-items {
    display: inline-block;
}

.tool-items {
    /*\*/
    display: block;
    /**/
    -height: 1px;
}

// A special case for qtips that belong to Mui dialogs (current example is the Game Prompt dialog).
// These are not inside the scaling container where we usually put them, so we put the qtip in the body.
// That allows us to make a rule targeting just those tooltips when the dialog is hovered.
body:has(.MuiPaper-root:hover) > .qtip {
    opacity: 1 !important;
    transition: opacity 200ms ease-out;
}
// Now that most of our outline effects are conditional on the page being hovered, we get some sort of
// default on a focused content-editable div. It's an ugly solid black. When we're not hovering,
// we don't want any edit-only outlines at all, so the user can see the page as it will be.
// So we have this rule to suppress that default outline.
.bloom-page:not(:hover) .bloom-editable:focus {
    outline: none !important;
}

// Topic chooser hint bubbles are edit-only affordances; hide them unless the page affordances are visible.
// Some of these rules are to make sure that it stays visible while the mouse is over the button itself.
#page-scaling-container .qtip.topic-chooser-hint-bubble {
    opacity: 0;
    pointer-events: none;
    transition: opacity 200ms ease-out;
}
#page-scaling-container:has(.bloom-page:hover) .qtip.topic-chooser-hint-bubble,
body:has(#canvas-element-context-controls:hover)
    #page-scaling-container
    .qtip.topic-chooser-hint-bubble,
#page-scaling-container .qtip.topic-chooser-hint-bubble:hover,
body:has(.qtip.topic-chooser-hint-bubble:hover)
    #page-scaling-container
    .qtip.topic-chooser-hint-bubble {
    opacity: 1;
    pointer-events: auto;
}
/* ... */

